--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <div class="desktop-screen">
 
 
+<!-- <section class="section-fixed"> -->
+
     <header>
+
 
         <img src="images/logomer.svg" alt="logo-image">
 
@@ -60,7 +63,7 @@
 
     <hr>
 
-
+<!-- </section> -->
 
     <main>
 
@@ -129,7 +132,7 @@
 
         <div class="skills">
             <h3>
-                Sketch - Figma - Principle - InVision - HTML5 - CSS
+                Sketch - Figma - Principle - InVision - HTML5 - CSS3
             </h3>
         </div>
 
